--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -3,4 +3,9 @@
         <title>Estupefaktum</title>
     </head>
     <body>
+    {% if user.is_authenticated %}
+        Logged in as {{ user.username }}. <a href="{% url 'logout' %}">Log out</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
     {% block main %}void{% endblock %}
