--- a/web/templates/submit.html
+++ b/web/templates/submit.html
@@ -1,4 +1,8 @@
 {% extends 'layout.html' %}
 {% block main %}
 <h2>Submit a word</h2>
+<form method='post'>{% csrf_token %}
+{{ form }}
+<input type="submit" value="Submit">
+</form>
 {% endblock %}
