--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -1,11 +1,49 @@
-<html>
-    <head>
-        <title>Estupefaktum</title>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Estupefactum</title>
+
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Estupefactum</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{% url 'home' %}">Today's word</a></li>
+            <li><a href="{% url 'recent' %}">Recent</a></li>
+            <li><a href="{% url 'submit' %}">Submit</a></li>
+            <li><a href="{% url 'contributors' %}">Contributors</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
     {% if user.is_authenticated %}
         Logged in as {{ user.username }}. <a href="{% url 'logout' %}">Log out</a>
     {% else %}
         <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">Sign up</a> (It's free!)
     {% endif %}
+    <div class="container"><div class="row">
     {% block main %}void{% endblock %}
+    </div></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+  </body>
+</html>
