Style navigation bar

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -7,6 +7,7 @@
     <title>Estupefactum</title>
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -31,15 +32,17 @@
             <li><a href="{% url 'submit' %}">Submit</a></li>
             <li><a href="{% url 'contributors' %}">Contributors</a></li>
           </ul>
+          <p class="navbar-text navbar-right">
+          {% if user.is_authenticated %}
+            Logged in as {{ user.username }}. <a href="{% url 'logout' %}" class="navbar-link">Log out</a>
+          {% else %}
+             <a href="{% url 'login' %}" class="navbar-link">Log in</a> or <a href="{% url 'signup' %}" class="navbar-link">Sign up</a> (It's free!)
+          {% endif %}
+          </p>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    {% if user.is_authenticated %}
-        Logged in as {{ user.username }}. <a href="{% url 'logout' %}">Log out</a>
-    {% else %}
-        <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">Sign up</a> (It's free!)
-    {% endif %}
     <div class="container"><div class="row">
     {% block main %}void{% endblock %}
     </div></div>
