--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -1,9 +1,17 @@
 {% extends 'layout.html' %}
+{% load bootstrap_form %}
 
 {% block main %}
 <h2>Become a Estupefactor now! It's free.</h2>
-<form method=post>{% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Sign up">
-</form>
+<div class="col-md-6">
+	<form method=post>{% csrf_token %}
+	    {% for field in form %}
+		    <div class="form-group">
+		        {{ field.errors }}
+		        <label class="your-class" for="{{ field.auto_id }}">{{ field.label }}</label> {{ field | form_control}}
+		    </div>
+	    {% endfor %}
+	    <input type="submit" class="btn btn-primary" value="Sign up">
+	</form>
+</div>
 {% endblock %}
