Introduce form_body template and inclusion tag

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -5,12 +5,7 @@
 <div class="col-md-6">
 	<h2>Log in</h2>
 	<form method=post>{% csrf_token %}
-	{% for field in form %}
-	    <div class="form-group">
-	        {{ field.errors }}
-	        <label class="your-class" for="{{ field.auto_id }}">{{ field.label }}</label> {{ field | form_control}}
-	    </div>
-	{% endfor %}
+	{% form_body form %}
 	<input type="submit" class="btn btn-primary" value="Log in">
 	</form>
 	<p>Don't have an account yet? <a href="{% url 'signup' %}">Sign up</a>, it's free.</p>
