--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Estupefactum</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Estupefactum</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           {% top_menu %}
