--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -15,7 +15,11 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="header">
+    <div class="container">
+    <h1>Estupefactum</h1>
+    </div>
+    <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -24,7 +28,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Estupefactum</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           {% top_menu %}
@@ -38,6 +41,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    </div>
 
     <div class="container"><div class="row">
     {% block main %}void{% endblock %}
