--- a/web/templates/submit.html
+++ b/web/templates/submit.html
@@ -2,9 +2,11 @@
 {% load bootstrap_form %}
 
 {% block main %}
+<div class="col-md-6">
 <h2>Submit a word</h2>
 <form method='post'>{% csrf_token %}
 	{% form_body form %}
 <input type="submit" class="btn btn-primary" value="Submit">
 </form>
 {% endblock %}
+</div>
