Retrieve word of today together with status info

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -2,10 +2,10 @@
 {% block main %}
 <div class="col-md-12">
 <h2>The Word of Today</h2>
-{% if not work_day %}
-<div class="alert alert-warning" role="alert">{{ date_type }}Today is not marked as a normal work day. This word is from {{ date }}.</div>
+{% if alert %}
+<div class="alert alert-warning" role="alert">{{ alert }}.</div>
 {% endif %}
-{% if word %}<div class="jumbotron"><h1>{{ word }}</h1></div>{% else %}<p>No words left! {{ word }} Please submit new ones.</p>{% endif %}
+<div class="jumbotron">{{ date }}<h1>{{ word }}</h1></div>
 <a href="{% url 'recent' %}">Show history</a>
 {% endblock %}
 </div>
