--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block main %}
 <div class="col-md-12">
-<h2>The Word of Today</h2>
+<h2>Word of the Day</h2>
 {% if alert %}
 <div class="alert alert-warning" role="alert">{{ alert }}.</div>
 {% endif %}
