Android compatibility for heading gradient

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -18,4 +18,5 @@
 .header {
 	color: #fff;
 	background: linear-gradient(to bottom, #a7cfdf 0%,#23538a 100%);
+	background: -webkit-linear-gradient(to bottom, #a7cfdf 0%,#23538a 100%);
 }
